@@ -256,6 +256,22 @@ static int login(AFPObj *obj, struct passwd *pwd, void (*logout)(void), int expi
         }
     }
 
+    if (obj->options.force_user) {
+        if (seteuid(obj->options.force_uid) < 0) {
+            LOG(log_error, logtype_afpd, "login: %s %s", pwd->pw_name, strerror(errno));
+            return AFPERR_BADUAM;
+        }
+        LOG(log_info, logtype_afpd, "login: force uid: %ju", (uintmax_t)obj->options.force_uid);
+    }
+
+    if (obj->options.force_group) {
+        if (setegid(obj->options.force_gid) < 0) {
+            LOG(log_error, logtype_afpd, "login: %s %s", pwd->pw_name, strerror(errno));
+            return AFPERR_BADUAM;
+        }
+        LOG(log_info, logtype_afpd, "login: force gid: %ju", (uintmax_t)obj->options.force_gid);
+    }
+
     LOG(log_debug, logtype_afpd, "login: supplementary groups: %s", print_groups(obj->ngroups, obj->groups));
 
     set_auth_switch(obj, expired);
